GNOME Bugzilla – Bug 747106
If the profile specified on the commandline is not found, use the default one
Last modified: 2015-04-01 18:56:04 UTC
In previous releases (3.8?) this was the behaviour.
Created attachment 300661 [details] [review] If the profile specified on the commandline is not found, use the default one Users may have .desktop files or scripts referring to profiles they've deleted.
Comment on attachment 300661 [details] [review] If the profile specified on the commandline is not found, use the default one Should use g_printerr() instead of g_warning(), and terminal_settings_list_dup_default_child() instead of terminal_profiles_list_dup_uuid_or_name(NULL)
Created attachment 300696 [details] [review] If the profile specified on the commandline is not found, use the default one Users may have .desktop files or scripts referring to profiles they've deleted.
Comment on attachment 300696 [details] [review] If the profile specified on the commandline is not found, use the default one Hmm. I overlooked the issue of @error, so it's probably best (although failure is very very unlikely) to go back to terminal_profiles_list_dup_uuid_or_name(NULL). Sorry! With that changed back, please commit to master and gnome-3-16. Thanks!
Created attachment 300732 [details] [review] If the profile specified on the commandline is not found, use the default one Users may have .desktop files or scripts referring to profiles they've deleted.
No worries. I can't commit myself though - please could you do that for me?
Pushed to master and 3-16.