client: legacy: Fall back to default profile

When using a nonexistent profile name or ID, fall back to the default
profile, for compatibility with gnome-terminal < 3.8.

https://bugzilla.gnome.org/show_bug.cgi?id=747106